--- a/Community.cshtml
+++ b/Community.cshtml
@@ -5,20 +5,39 @@
     <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
 
-<body id="body">
-    <a href="https://foundation.atssa.com/Donate-Now"><img src="~/images/ATSSA logo.jpg" style="width:300px; height:auto;" /></a>
-    <br />
-    <br />
-    <textarea style="border:none; overflow:hidden; text-align: justify" rows="2" cols="100">The American Traffic Safety Services Association (ATSSA) Foundation exists to promote roadway safety through charitable giving and public awareness programs. Click on the image above to donate now.</textarea>
-    <br />
-    <br />
-    <a href="https://www.youtube.com/watch?v=SV8jGr7dFVw"><img src="~/Images/onemillioncups1.jpg" style="width:300px; height:auto; margin-bottom:10px" /></a>
-    <br />
-    <textarea style="border:none; overflow:hidden; text-align: justify" rows="4" cols="100">Flaggers National Traffic Control Systems provides temporary traffic control for contractors who are improving America's infrastructure rebuilding, repairing, and maintaining highways, road surfaces, and bridges, as well as training for traffic controllers. Its vision is to empower safety personnel on our roadways to prevent accidents and ultimately save lives.</textarea>
-    <br />
-    <textarea style="border:none; overflow:hidden; text-align: justify" rows="6" cols="100">About: 1 Million Cups (1MC) is a simple way to engage entrepreneurs in communities around the world. Each week, the 1MC program offers a local entrepreneur an opportunity to present their startups to a diverse audience of mentors, advisors, and entrepreneurs. Presenters prepare a 6 minute educational presentation and engage in 20 minutes of feedback and questioning after they present. For more information about the program visit 1millioncups.com. Click the image to see the presentation given by Flaggers National Traffic Control Systems in 2015.</textarea>
-    <br />
-    <br />
-    <br />
-</body>
+<style>
+    .vertical-pad{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
 
+</style>
+
+<div id="container">
+    <div class="col-md-12">
+        <a href="https://foundation.atssa.com/Donate-Now"><img src="~/images/ATSSA logo.jpg" style="width:300px; height:auto;" /></a>
+
+        <p class="text-left vertical-pad">
+            The American Traffic Safety Services Association (ATSSA)
+            Foundation exists to promote roadway safety through charitable giving and public awareness programs.
+        </p>
+      
+        <a href="https://www.youtube.com/watch?v=SV8jGr7dFVw"><img src="~/Images/onemillioncups.jpg" style="width:300px; height:auto; margin-bottom:10px" /></a>
+        
+        <p class="text-left vertical-pad">
+            National Traffic Control Systems provides temporary traffic control for contractors who are improving America's infrastructure
+            rebuilding, repairing, and maintaining highways, road surfaces, and bridges, as well as training for traffic controllers.
+            Its vision is to empower safety personnel on our roadways to prevent accidents and ultimately save lives.
+        </p>
+
+        <p class="text-left vertical-pad">
+            About: 1 Million Cups (1MC) is a simple way to engage entrepreneurs
+            in communities around the world. Each week, the 1MC program offers a local entrepreneur an opportunity
+            to present their startups to a diverse audience of mentors, advisors, and entrepreneurs.
+            Presenters prepare a 6 minute educational presentation and engage in 20 minutes of feedback
+            and questioning after they present. For more information about the program visit 1millioncups.com.
+            Click the image to see the presentation given by Flaggers National Traffic Control Systems in 2015.
+        </p>
+
+    </div>
+</div>
