--- a/ProspectiveEmployee.cshtml
+++ b/ProspectiveEmployee.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "ProspectiveEmployee";
 }
 
@@ -13,290 +12,79 @@
     string thisDay = Convert.ToString(today);
 }
 
-    <style>
-        .pad {
-            padding: 100px;
-        }
+<style>
+    .pad-left {
+        padding-left: 20px;
+    }
 
-        @@media only screen and (max-width: 992px) {
-            .center {
-                float: none !important;
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                text-align: left;
-            }
-        }
+    td {
+        font-size: 10pt;
+        align-self: center;
+        
+    }
 
-        @@media only screen and (max-width: 420px) {
-            .text-left.pad {
-                text-align: left;
-                padding-left: 10px;
-                padding-right: 10px;
-            }
-        }
+    .font_2 {
+        font: normal normal normal 28px/1.375em didot-w01-italic,serif;
+    }
 
-        #content_area {
-            clear: both;
-            margin-left: 5px;
-        }
-
-        #container {
-            background-color: white;
-            width: 900px;
-            margin-left: auto;
-            margin-right: auto;
-            font-size: 12px;
-            font-family: Verdana, Geneva, sans-serif;
-            color: #333;
-            overflow: hidden;
-        }
-
-        #header {
-            background-color: #036;
-            height: 220px;
-            color: #EDF2F4;
-        }
-
-        #body {
-            background-image: url(../images/navyback.jpg);
-        }
-
-        #nav {
-            background-color: #05527F;
-            height: 35px;
-        }
-
-        #nav a {
-            color: #FFF;
-            text-decoration: none;
-        }
-
-        #nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 10px;
-        }
-
-        #nav li {
-            display: inline;
-            padding-right: 20px;
-        }
-
-        #nav a:hover {
-            color: #036;
-        }
-
-        #table {
-            width: 100%;
-            float: left;
-        }
-
-        th1 {
-            background-color: #FFF;
-            font-size: 10pt;
-            text-align: center;
-        }
-
-        td1 {
-            background-color: #FFF;
-            font-size: 10pt;
-            text-align: left;
-        }
-
-        #contentLeft {
-            width: 350px;
-            float: left;
-        }
-
-        #contentRight {
-            width: 210px;
-            float: left;
-            margin: 20px;
-            padding: 10px;
-        }
-
-        #content_area ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 10px;
-        }
-
-        .txtNew_override-left * {
-            text-align: left !important;
-        }
-
-        .txtNew_override-right * {
-            text-align: right !important;
-        }
-
-        .txtNew_override-center * {
-            text-align: center !important;
-        }
-
-        .txtNew_override-justify * {
-            text-align: justify !important;
-        }
-
-        .txtNew > * {
-            pointer-events: auto;
-        }
-
-        .txtNew li {
-            font-style: inherit;
-            font-weight: inherit;
-            line-height: inherit;
-            letter-spacing: normal;
-        }
-
-        .txtNew ol, .txtNew ul {
-            padding-left: 1.3em;
-            padding-right: 0;
-            margin-left: 0.5em;
-            margin-right: 0;
-            line-height: normal;
-            letter-spacing: normal;
-        }
-
-        .txtNew ul {
-            list-style-type: disc;
-        }
-
-        .txtNew ol {
-            list-style-type: decimal;
-        }
-
-        .txtNew ul ul, .txtNew ol ul {
-            list-style-type: circle;
-        }
-
-        .txtNew ul ul ul, .txtNew ol ul ul {
-            list-style-type: square;
-        }
-
-        .txtNew ul ol ul, .txtNew ol ol ul {
-            list-style-type: square;
-        }
-
-        .txtNew ul[dir="rtl"], .txtNew ol[dir="rtl"] {
-            padding-left: 0;
-            padding-right: 1.3em;
-            margin-left: 0;
-            margin-right: 0.5em;
-        }
-
-        .txtNew ul[dir="rtl"] ul, .txtNew ul[dir="rtl"] ol, .txtNew ol[dir="rtl"] ul, .txtNew ol[dir="rtl"] ol {
-            padding-left: 0;
-            padding-right: 1.3em;
-            margin-left: 0;
-            margin-right: 0.5em;
-        }
-
-        .txtNew p {
-            margin: 0;
-            line-height: normal;
-            letter-spacing: normal;
-        }
-
-        .txtNew h1 {
-            margin: 0;
-            line-height: normal;
-            letter-spacing: normal;
-        }
-
-        .txtNew h2 {
-            margin: 0;
-            line-height: normal;
-            letter-spacing: normal;
-        }
-
-        .txtNew h3 {
-            margin: 0;
-            line-height: normal;
-            letter-spacing: normal;
-            word-wrap: break-word;
-        }
-
-        .txtNew h4 {
-            margin: 0;
-            line-height: normal;
-            letter-spacing: normal;
-        }
-
-        .txtNew h5 {
-            margin: 0;
-            line-height: normal;
-            letter-spacing: normal;
-        }
-
-        .txtNew h6 {
-            margin: 0;
-            line-height: normal;
-            letter-spacing: normal;
-        }
-
-        .txtNew a {
-            color: inherit;
-        }
-
-        #comp-jyyn24ld {
-            position: relative;
-            margin: 0px 0px 8px 0px;
-            left: 30px;
-            justify-self: start;
-            align-self: start;
-        }
-
-        #comp-jyyn3a46 {
-            position: relative;
-            margin: 0px 0px 0px 0;
-            left: 40px;
-            justify-self: start;
-            align-self: start;
-        }
-
-        .font_2 {
-            font: normal normal normal 28px/1.375em didot-w01-italic,serif;
-        }
-
-        .font_8 {
-            font: normal normal normal 15px/1.75em futura-lt-w01-light,sans-serif;
-        }
-    </style>
+    .font_8 {
+        font: normal normal normal 15px/1.75em futura-lt-w01-light,sans-serif;
+    }
+</style>
 
 <div id="container">
     <div class="row">
         <div class="col-md-6 col-sm-12">
-            <h3 class="txtNew" id="comp-jyyn24ld" style="font: normal normal normal 28px/1.375em didot-w01-italic,serif; font-family: palatino linotype,serif; font-size:20px; color:#292929; text-align:start; pointer-events:auto; letter-spacing: normal; line-height: normal; vertical-align: baseline; margin-left:0px; padding:0; border:0; outline:0;">Positions available</h3>
-            <div id="table">
-                <table style="width:302px" ; class="txtNew" id="comp-jyyn3a46">
+            <div class="row">
+                <h3 class="pull-left pad-left" style="font: normal normal normal 28px/1.375em didot-w01-italic,serif; font-family: palatino linotype,serif; font-size:20px;">Positions available</h3>
+            </div>
+            <div class="row">
+                <table>
                     <tr>
-                        <td1><p class="font_8" style="width:302px;height:auto;pointer-events:none" id="comp-jyyn3a46">*Certified Traffic Control Supervisor</td1>
+                        <td><p class="font_8 pull-left">*Certified Traffic Control Supervisor</td>
                     </tr>
                     <tr>
-                        <td1><p class="font_8" style="width:302px;height:auto;pointer-events:none" id="comp-jyyn3a46">*Flagger</td1>
+                        <td><p class="font_8 pull-left">*Flagger</td>
                     </tr>
                     <tr>
-                        <td1><p class="font_8" style="width:302px;height:auto;pointer-events:none" id="comp-jyyn3a46">*Office Assistant</td1>
+                        <td><p class="font_8 pull-left">*Office Assistant</td>
                     </tr>
                     <tr>
-                        <td1><p class="font_8" style="width:302px;height:auto;pointer-events:none" id="comp-jyyn3a46">*Safety Management Coordinator</td1>
+                        <td><p class="font_8 pull-left">*Safety Management Coordinator</td>
                     </tr>
                 </table>
             </div>
+
             <br />
-            <h3 class="txtNew" id="comp-jyyn24ld" style="font: normal normal normal 28px/1.375em didot-w01-italic,serif; font-family: palatino linotype,serif; font-size:20px; color:#292929; width: 302px; text-align:start; pointer-events:auto; letter-spacing: normal; margin-top:120px; margin-bottom:10px; vertical-align: baseline; padding:0; border:0; outline:0;">Testimonies from our employees</h3>
-            <img style="object-position: 50% 50%; margin-left: 30px; width: 379px; height: 71px; object-fit: cover;" alt="Testimony1" data-type="image" itemprop="image" src="~/images/Testimony1.png">
-            <img style="object-position: 50% 50%; margin-left: 30px; width: 379px; height: 71px; object-fit: cover;" alt="Testimony2" data-type="image" itemprop="image" src="~/images/Testimony2.png">
-            <h3 class="txtNew" id="comp-jyyn24ld" style="font: normal normal normal 28px/1.375em didot-w01-italic,serif; font-family: palatino linotype,serif; font-size:20px; color:#292929; text-align:start; pointer-events:auto; letter-spacing: normal; line-height: normal; vertical-align: baseline; margin-top: 35px; padding:0; border:0; outline:0;">ATSSA Training and Certification Courses</h3>
-            <a href="https://www.atssa.com/Training/Find-a-Course"><img class="txtNew" id="comp-jyyn24ld" style="width: 264px; height: 185px; float:left; " alt="ATSSA logo" data-type="image" itemprop="image" src="~/images/ATSSA logo.jpg"></a>
+
+            <div class="row">
+                <h3>Testimonies from our employees</h3>
+            </div>
+
+            <div class="row">
+                <img style="object-position: 50% 50%; margin-left: 30px; width: 379px; height: 71px; object-fit: cover;" alt="Testimony1" data-type="image" itemprop="image" src="~/images/Testimony1.png">
+            </div>
+
+            <div class="row">
+                <img style="object-position: 50% 50%; margin-left: 30px; width: 379px; height: 71px; object-fit: cover;" alt="Testimony2" data-type="image" itemprop="image" src="~/images/Testimony2.png">
+            </div>
+
+            <div class="row">
+                <h3 style="font: normal normal normal 28px/1.375em didot-w01-italic,serif; font-family: palatino linotype,serif; font-size:20px;">ATSSA Training and Certification Courses</h3>
+                <a href="https://www.atssa.com/Training/Find-a-Course"><img style="width: 264px; height: 185px;" alt="ATSSA logo" data-type="image" itemprop="image" src="~/images/ATSSA logo.jpg"></a>
+            </div>
         </div>
 
         <div class="col-md-6 col-sm-12">
             <div class="row">
-                <h3 class="pull-left center" id="comp-jyyn24ld" style="font: normal normal normal 28px/1.375em didot-w01-italic,serif; font-family: palatino linotype,serif; font-size:20px; color:#292929; text-align:start; left:0px; pointer-events:auto; letter-spacing: normal; line-height: normal; vertical-align: baseline; margin-left:0px; padding:0; border:0; outline:0;">Join our team</h3>
+
             </div>
 
+            <div class="row">
+                <h3 class="pull-left center" style="font: normal normal normal 28px/1.375em didot-w01-italic,serif; 
+                    font-family: palatino linotype,serif; font-size:20px;">Join our team
+                </h3>
+            </div>
             <div class="row">
                 <form id="contactform" class="pull-left text-left center" action="#" method="post" enctype="multipart/form-data">
                     <fieldset>
@@ -355,7 +143,7 @@
                         </p>
                         <p>
                             <label for="Preferred Method of Contact">Preferred Method of Contact:</label><br />
-                            <select name="Contact" id="Please Select">
+                            <select name="Contact" id="Please Select" style="width:250px;">
                                 <option value="Mail">Mail</option>
                                 <option selected value="Phone">Phone</option>
                                 <option value="Email">Email</option>
@@ -364,7 +152,7 @@
 
                         <p>
                             <label for="Position of Interest">Position of Interest:</label><br />
-                            <select name="Contact" id="Please Select">
+                            <select name="Contact" id="Please Select" style="width:250px;">
                                 <option value="Mail">Certified Traffic Control Supervisor</option>
                                 <option selected value="Phone">Flagger</option>
                                 <option value="Email">Office Assistant</option>
@@ -378,7 +166,7 @@
                         <p>
                             <div>
                                 <label for="file">Attach a Resume: (Optional)</label>
-                                <input type="file" id="file" name="file" multiple>
+                                <input class="center" type="file" id="file" name="file" multiple>
                             </div>
                         </p>
                         <p>
