--- a/ProspectiveEmployee.cshtml
+++ b/ProspectiveEmployee.cshtml
@@ -86,7 +86,7 @@
                 </h3>
             </div>
             <div class="row">
-                <form id="contactform" class="pull-left text-left center" action="#" method="post" enctype="multipart/form-data">
+                <form id="contactform" class="pull-left text-left center" action="mailto:info@flaggersnational.com" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <p>
                             <label for="name">Salutation:</label>
