--- a/ProspectiveEmployee.cshtml
+++ b/ProspectiveEmployee.cshtml
@@ -36,23 +36,19 @@
     <div class="row">
         <div class="col-md-6 col-sm-12">
             <div class="row">
-                <h3 class="pull-left pad-left" style="font: normal normal normal 28px/1.375em didot-w01-italic,serif; font-family: palatino linotype,serif; font-size:20px;">Positions available</h3>
+                <h3>Positions available:</h3>
             </div>
             <div class="row">
-                <table>
-                    <tr>
-                        <td><p class="font_8 pull-left">*Certified Traffic Control Supervisor</td>
-                    </tr>
-                    <tr>
-                        <td><p class="font_8 pull-left">*Flagger</td>
-                    </tr>
-                    <tr>
-                        <td><p class="font_8 pull-left">*Office Assistant</td>
-                    </tr>
-                    <tr>
-                        <td><p class="font_8 pull-left">*Safety Management Coordinator</td>
-                    </tr>
-                </table>
+                <h4>*Certified Traffic Control Supervisor</h4>
+            </div>
+            <div class="row">
+                <h4>*Flagger</h4>
+            </div>
+            <div class="row">
+                <h4>*Office Assistant</h4>
+            </div>
+            <div class="row">
+                <h4>*Safety Management Coordinator</h4>
             </div>
 
             <br />
