--- a/CurrentEmployee.cshtml
+++ b/CurrentEmployee.cshtml
@@ -9,26 +9,25 @@
 </head>
 <body>
     <div id="colOne">
-        <nav>
+        <nav style="margin-top: 20px;">
             <ul>
                 <li>
                     <div>
                         <a href="/Home/MyAccount">My Account</a>
                     </div>
                 </li>
+                <li>
+                    <div>
+                        <a href="#">Clock in/out (GPS authenticated)</a>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="TimeOff">Request time off</a>
+                    </div>
+                </li>
             </ul>
         </nav>
-        <div>
-            <iframe src="~/Home/MyAccount"></iframe>
-        </div>
-        <div>
-            <span>Clock in/out (GPS authenticated)</span>
-        </div>
-        <div>
-            <a href="TimeOff">
-                <span>Request time off</span>
-            </a>
-        </div>
     </div>
     <div id="colTwo">
     <h2>
